name:                cyletris
version:             0.1.0.0
synopsis:            Yet another Tetris-like game.
description:         Please see README.md
homepage:            
license:             BSD3
license-file:        LICENSE
author:              Sonat Süer
maintainer:          
copyright:           
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable cyletris
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Board,
                       Display,
                       Global,
                       Logic,
                       Pieces,
                       Callbacks
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       GLUT,
                       array,
                       random,
                       time
